tests/baselines/reference/instancePropertyInClassType.errors.txt
tests/cases/conformance/classes/members/classTypes/instancePropertyInClassType.ts(4,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/classTypes/instancePropertyInClassType.ts(7,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/classTypes/instancePropertyInClassType.ts(17,16): error TS6234: This expression is not callable because it is a 'get' accessor. Did you mean to use it without '()'?
  Type 'Number' has no call signatures.
tests/cases/conformance/classes/members/classTypes/instancePropertyInClassType.ts(24,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/classTypes/instancePropertyInClassType.ts(27,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/conformance/classes/members/classTypes/instancePropertyInClassType.ts(37,16): error TS6234: This expression is not callable because it is a 'get' accessor. Did you mean to use it without '()'?
  Type 'String' has no call signatures.


==== tests/cases/conformance/classes/members/classTypes/instancePropertyInClassType.ts (6 errors) ====
    module NonGeneric {
        class C {
            x: string;
            get y() {
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                return 1;
            }
            set y(v) { }
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            fn() { return this; }
            constructor(public a: number, private b: number) { }
        }
    
        var c = new C(1, 2);
        var r = c.fn();
        var r2 = r.x;
        var r3 = r.y;
        r.y = 4;
        var r6 = c.y(); // error
                   ~
!!! error TS6234: This expression is not callable because it is a 'get' accessor. Did you mean to use it without '()'?
!!! error TS6234:   Type 'Number' has no call signatures.
    
    }
    
    module Generic {
        class C<T,U> {
            x: T;
            get y() {
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                return null;
            }
            set y(v: U) { }
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            fn() { return this; }
            constructor(public a: T, private b: U) { }
        }
    
        var c = new C(1, '');
        var r = c.fn();
        var r2 = r.x;
        var r3 = r.y;
        r.y = '';
        var r6 = c.y(); // error
                   ~
!!! error TS6234: This expression is not callable because it is a 'get' accessor. Did you mean to use it without '()'?
!!! error TS6234:   Type 'String' has no call signatures.
    }